# DistributedIM

./: .gitignore  CMakeLists.txt  README.md
deploy/: Dockerfile.ai-service  Dockerfile.gateway  Dockerfile.http-api  docker-compose.yml  init.sql
deploy/grafana/dashboards/: gateway-dashboard.json
deploy/grafana/datasources/: prometheus.yml
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/grafana/provisioning/datasources/: datasources.yml
deploy/nginx/: nginx.conf
deploy/prometheus/: prometheus.yml
docs/: OPTIMIZATION_PLAN.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: Chat.vue  GroupChat.vue  GroupList.vue  Login.vue  UserList.vue
frontend/src/stores/: group.ts  message.ts  user.ts  websocket.ts
frontend/src/types/: index.ts  websocket.ts
gateway/: CMakeLists.txt  config.ini  config.json  test_bad_config.ini
gateway/include/: AIServiceClient.h  AckTracker.h  AuditLogger.h  Config.h  Connection.h  E2EECrypto.h  EpollServer.h  GatewayRegistry.h  GroupManager.h  Logger.h  MessageHandler.h  Metrics.h  PriorityQueue.h  RateLimiter.h  RedisClient.h  WebSocketCodec.h
gateway/src/: AIServiceClient.cpp  AckTracker.cpp  AuditLogger.cpp  Config.cpp  E2EECrypto.cpp  EpollServer.cpp  GatewayRegistry.cpp  GroupManager.cpp  JsonParser.cpp  Logger.cpp  MessageHandler.cpp  Metrics.cpp  PriorityQueue.cpp  RateLimiter.cpp  RedisClient.cpp  WebSocketCodec.cpp  main.cpp
gateway/tests/: test_config.cpp  test_json_parser.cpp  test_redis_client.cpp
gateway/tools/: test_client.cpp  test_config_error.cpp  test_config_load.cpp
include/: Connection.h  EpollServer.h  JsonParser.h  MessageHandler.h  RedisClient.h
proto/: im.proto
services/ai-service/: main.py  requirements.txt
services/ai-service/providers/: base.py
services/http-api/: go.mod
services/http-api/cmd/: main.go
src/: Connection.cpp  EpollServer.cpp  JsonParser.cpp  MessageHandler.cpp  RedisClient.cpp  main.cpp
